# apicult

./: IMPLEMENTOR.md  LICENSE  README.md  implementation_tests.api
elixir/: .gitignore  Changelog.md  README.md  mix.exs
elixir/lib/: apicult.ex
elixir/lib/apicult/: application.ex  generator.ex  parser.ex  request.ex  result.ex
elixir/test/: httpbin.api  httpbin.ex  httpbin_test.exs  implementation_test.exs
elixir/test/apicult/: generator_test.exs  parser_test.exs  result_test.exs
haskell/: CHANGELOG.md  README.md  apicult.cabal  cabal.project  justfile
haskell/app/: Main.hs
haskell/src/: Apicult.hs
haskell/src/Apicult/: Parse.hs  Request.hs  TH.hs
haskell/test/: Spec.hs  httpbin.api
haskell/test/Test/: HttpBin.hs  Implementation.hs  Parser.hs  TH.hs
