cabal-version:   3.0
name:            apicult
version:         0.0.0.0
synopsis:        See README for more info
description:
  See README for more info.
  See README.md for more details.

license-file:    LICENSE
author:          Georges Dubus
maintainer:      Georges Dubus <georges.dubus@hey.com>
copyright:       2022 Georges Dubus
build-type:      Simple
extra-doc-files:
  CHANGELOG.md
  README.md

tested-with:     GHC ==9.2.4 || ==9.4.2

common common-options
  build-depends:
    , aeson             ^>=2.1
    , base              >=4.16.0.0 && <4.18
    , case-insensitive  ^>=1.2
    , exceptions        ^>=0.10
    , http-conduit      ^>=2.3
    , megaparsec        ^>=9.2
    , names-th          ^>=0.3
    , relude            >=1.0      && <1.2
    , template-haskell  >=2.18     && <2.20

  mixins:
    base hiding (Prelude),
    relude (Relude as Prelude),
    relude

  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wredundant-constraints
    -Wnoncanonical-monad-instances

  if impl(ghc >=8.2)
    ghc-options: -fhide-source-paths

  if impl(ghc >=8.4)
    ghc-options: -Wmissing-export-lists -Wpartial-fields

  if impl(ghc >=8.8)
    ghc-options: -Wmissing-deriving-strategies -fwrite-ide-info -hiedir=.hie

  if impl(ghc >=8.10)
    ghc-options: -Wunused-packages

  default-language:   GHC2021
  default-extensions: OverloadedStrings

library
  import:          common-options
  hs-source-dirs:  src
  exposed-modules:
    Apicult
    Apicult.Parse
    Apicult.Request
    Apicult.TH

executable apicult
  import:         common-options
  hs-source-dirs: app
  main-is:        Main.hs
  build-depends:  apicult
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N

test-suite apicult-test
  import:         common-options
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Spec.hs
  other-modules:
    Test.HttpBin
    Test.Implementation

  build-depends:
    , aeson-optics
    , apicult
    , hspec             >=2.9.6
    , hspec-megaparsec
    , http-client
    , optics

  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
